fix(ui): make style card overflow pixel-perfect
The final-final time...hopefully.

--- a/scss/ui/_reset.scss
+++ b/scss/ui/_reset.scss
@@ -24,7 +24,10 @@ html {
         > main {
             display: flex;
             min-height: calc(100vh - 130px);
-            > .wrapper { overflow-x: hidden }
+
+            @media screen and (max-width: 1400px) {
+                @at-root html { overflow-x: hidden }
+            }
         }
 
         > footer > div { min-height: 64px }
